<resources>
    <string name="app_name" translatable="false">Driver</string>
    <string name="title_activity_maps">Driver</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="title_activity_location_picker">LocationPicker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Google Places API</string>
    <string name="hello_second_fragment" translatable="false">Second Fragment</string>
    <string name="note_place_holder">Note to driver</string>
    <string name="finding_a_driver">Finding a driver..</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="confirm_pickup">Set pickup point</string>
    <string name="confirm_destination">Set destination point</string>
    <string name="book">Request Driver</string>
    <string name="price">Price:</string>
    <string name="calculating_price">Calculating..</string>
    <string name="female_driver_only">Female driver only</string>
    <string name="register">Register</string>
    <string name="now">Now</string>
    <string name="select_date">Select date</string>
    <string name="accepted_request">Request has been accepted</string>
    <string name="on_the_way">Driver is on the way</string>
    <string name="arrived_pickup">Arrived at pickup point</string>
    <string name="passenger_onboard">Passenger on board</string>
    <string name="arrived_dest">Arrived at destination</string>
    <string name="completed">Ride completed</string>
    <string name="arrived_safely">Arrived safely</string>
    <string name="cancel_request">Cancel request</string>
    <string name="search_placeholder">Click to search</string>
    <string name="driver_canceled_message">Driver canceled the request. Please book again.</string>
    <string name="service_not_available">Service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="address_found">Address was found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="profile_activity_name">Profile</string>
    <string name="history_activity_name">Previous requests</string>
    <string name="register_activity_name">Register</string>
    <string name="about_activity_name">About Driver</string>
    <string name="developed_by">Driver is developed by Favicon</string>
    <string name="about_driver">About Driver</string>
    <string name="about_driver_content" translatable="false">Create your account with us , you will find at the driver app if this is the first time try it, this sentence ( Don\'t have an account yet? Register ) , and fill the gaps with your correct info.\nThe payment will be cash at the end of the trip.\nPayment cash Sudanese currency (SD) or the equivalent in foreign currencies will be reimbursed. After your trip, we will email you a receipt.</string>
    <string name="contact_us">Contact us</string>
    <string name="contact_us_content">Phone: +249917255444\nEmail: drivertaxisudan2017@gmail.com</string>
    <string name="price_failed_to_connect">Failed to connect. Retrying..</string>
    <string name="logged_in_from_another_device">You\'ve logged in from another device.</string>
    <string name="ic_desc_call_driver">Call Driver</string>
    <string name="dash" translatable="false">-</string>
    <string name="call_driver">Call driver</string>
    <string name="call_driver_message">Do you want to call the driver?</string>
    <string name="cancel">Cancel</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="note">Note</string>
    <string name="language">عربي</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_about">About</string>
    <string name="nav_previous_requests">Previous requests</string>
    <string name="nav_profile">Profile</string>
    <string name="time_too_far">Time is too far. Please choose an earlier date.</string>
    <string name="invalid_date">Invalid date</string>
    <string name="unkown_error_occured">Unknown error occurred</string>
    <string name="error_setting_date">Error setting date. Try again</string>
    <string name="all_drivers_are_busy">Sorry, all drivers are busy. Try again later.</string>
    <string name="failed_to_connect_to_the_server">No Internet connection</string>
    <string name="thank_you_for_booking">Thank you for booking with us.</string>
    <string name="connecting">Connecting</string>
    <string name="error_sending_request">Error sending request</string>
    <string name="done">Done</string>
    <string name="dash_minutes">-- minutes</string>
    <string name="route_successfully_computed">"Route successfully computed "</string>
    <string name="route_failed">"Failed to connect. Check your internet connection"</string>
    <string name="wait_until_price_is_calculating">Wait until price is calculated</string>
    <string name="pick_time">Pick Time</string>
    <string name="any_note_or_incentive">Any note or incentive for the driver</string>
    <string name="update">Update</string>
    <string name="please_login_again">Please login again</string>
    <string name="don_t_have_an_account_yet_register">Don\'t have an account yet? Register.</string>
    <string name="pick_up">Pick up</string>
    <string name="destination">Destination</string>
    <string name="dashes" translatable="false">--</string>
    <string name="currency">SDG</string>
    <string name="pick_up_in">Pick up in</string>
    <string name="account_info">Account info</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="registering">Registering..</string>
    <string name="please_wait">Please wait</string>
    <string name="password_should_be_at_least_4">Password should at least be 4 characters.</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="fill_all_fields">Please fill all fields.</string>
    <string name="outdated_app_message">Your app is outdated!</string>
    <string name="outdated_app_message_body">Please update your application to continue using this app.</string>
    <string name="update_your_password_message">Update your password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="update_your_phone_message">Update your phone</string>
    <string name="update_your_fullname">Update your full name</string>
    <string name="wrong_password">Wrong password</string>
    <string name="password_updated">Password updated</string>
    <string name="update_data">Update data</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="updating_profile_data">Updating profile data</string>
    <string name="you_did_not_update_profile">You did not update your profile. Continue?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="status_completed">Completed</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="status_no_driver">No driver</string>
    <string name="time">Time</string>
    <string name="price_no_colon">Price</string>
    <string name="driver_name">Driver name</string>
    <string name="plate_no">Plate No.</string>
    <string name="details_icon">details icon</string>
    <string name="click_to_update_password">Click to update password</string>
    <string name="spaced_minutes">" minutes"</string>
    <string name="nav_ongoing_requests">Ongoing requests</string>
    <string name="nav_new_request">New request</string>
    <string name="ongoing_requests_activity_name">Ongoing Requests</string>
    <string name="selected_request_details">Request details</string>
    <string name="set_current_ride">Set current ride</string>
    <string name="wait_till_driver_accepts">You can start a new request when a driver accepts the current one.</string>
    <string name="user_password_incorrect">Email or password are incorrect</string>
    <string name="unable_to_get_version">Driver</string>
    <string name="failed_to_get_location">Failed to get location address. Try a different location.</string>
    <string name="cancel_request_dialog_message">Are you sure you want to cancel this request?</string>
    <string name="no_requests_found">No requests found</string>
    <string name="ongoing_ride">Ongoing ride</string>
    <string name="requets_has_been_canceled">Request has been canceled.</string>


    <string-array name="gender_array">
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>
</resources>
