<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_selected_request"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.islam.ubclone.SelectedOngoingRequestActivity"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/incoming_toolbar"
        android:background="@android:color/white"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:elevation="4dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            >
            <TextView
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#009688"
                android:text="@string/from"/>
            <TextView
                android:id="@+id/request_details_pickup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:textSize="16sp"
                android:paddingTop="8dp"
                android:paddingBottom="13dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#33000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="13dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/to"/>

            <TextView
                android:id="@+id/request_details_dest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="13dp"
                android:textSize="16sp"
                android:text="" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#33000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="13dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/time"/>

            <TextView
                android:id="@+id/request_details_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:textSize="16sp"
                android:paddingBottom="20dp"
                android:text="" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#33000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="13dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/price_no_colon"/>

            <TextView
                android:id="@+id/request_details_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="13dp"
                android:textSize="16sp"
                android:text="" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#33000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="13dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/driver_name"/>

            <TextView
                android:id="@+id/request_details_driver_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="13dp"
                android:textSize="16sp"
                android:text="" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#33000000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="13dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/plate_no"/>

            <TextView
                android:id="@+id/request_details_plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="13dp"
                android:textSize="16sp"
                android:text="" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#33000000" />



        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/set_current_ride"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:onClick="setAsCurrentRie"
        />
</LinearLayout>
