<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.wisam.driver.ubclone.ProfileActivity"
    android:background="@android:color/white">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.wisam.driver.ubclone.AboutActivity"
            android:orientation="vertical">

            <!--<ImageView-->
            <!--android:id="@+id/iec_logo"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="160dp"-->
            <!--android:src="@drawable/iec_logo"/>-->
            <TextView
                android:id="@+id/about_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:paddingBottom="8dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/about_driver"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_driver_content"
                android:lineSpacingExtra="4dp" />

            <View
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/sepGray" />

            <TextView
                android:id="@+id/contact_us"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:paddingBottom="8dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/contact_us"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us_content"
                android:lineSpacingExtra="4dp" />


            <View
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/sepGray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#888"
                android:gravity="center_horizontal"
                android:text= ""
                android:layout_margin="6dp"
                android:id="@+id/versionName"/>


            <View
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/sepGray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#888"
                android:gravity="center_horizontal"
                android:text="@string/developed_by"
                android:layout_margin="6dp"
                android:id="@+id/developed_by" />


        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>